--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
+		<maven.compiler.release>11</maven.compiler.release>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -169,6 +170,7 @@
 			<version>5.7.1</version>
 		</dependency>
 
+
 	</dependencies>
 
 	<build>
@@ -182,6 +184,11 @@
 					</image>
 				</configuration>
 			</plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.3</version>
+            </plugin>
 		</plugins>
 	</build>
 
